...
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/startNewTripButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Start New Trip"
        android:layout_marginTop="16dp"/>

</LinearLayout>
...
